<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textWhite"
    tools:context=".GameScreenFragment">

    <ImageView
        android:id="@+id/game_banner_image"
        android:layout_width="411dp"
        android:layout_height="114dp"
        android:contentDescription="@string/game_background_image_content_description"
        android:src="@drawable/gaint_bomb_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/game_profile_image"
        android:layout_width="186dp"
        android:layout_height="153dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/game_profile_image_content_description"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="@+id/game_banner_image"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/game_banner_image"
        app:layout_constraintTop_toTopOf="@+id/game_banner_image" />

    <ImageButton
        android:id="@+id/img_favourite"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="48dp"
        android:onClick="onFavouritesPress"
        android:scaleType="centerCrop"
        android:src="@drawable/favourite_heart"
        app:layout_constraintStart_toEndOf="@+id/text_deck_descrip"
        app:layout_constraintTop_toBottomOf="@+id/game_profile_image" />

    <Button
        android:id="@+id/btn_save_picture"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onSaveImage"
        android:text="@string/save_profile_image_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toEndOf="@+id/text_deck_descrip"
        app:layout_constraintTop_toBottomOf="@+id/img_favourite" />

    <TextView
        android:id="@+id/text_deck_descrip"
        android:layout_width="237dp"
        android:layout_height="171dp"
        android:layout_marginEnd="167dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_profile_image" />

    <TextView
        android:id="@+id/text_game_title"
        android:layout_width="391dp"
        android:layout_height="34dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_profile_image" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="396dp"
        android:layout_height="234dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="216dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_game_title" />

    <Button
        android:id="@+id/btn_changeImage"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="checkPermissions"
        android:text="Change Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toEndOf="@+id/text_deck_descrip"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_picture" />

</android.support.constraint.ConstraintLayout>